--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,23 @@
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/Notification?useSSL=false&serverTimezone=UTC
-
 spring.datasource.username=dummyuser
 spring.datasource.password=@Aryan_dummy_123
 
+# Kafka Config
 kafka.topic = notification.send_sms
 kafka.bootstrapAddress = localhost:9092
 kafka.groupid = group1
+
+
+# Redis Config
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+redis.set = redisKey
+
+
+# github token : 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
+# zookeeper server start command - zookeeper-server-start.sh /Users/aryangarg/Downloads/kafka_2.13-3.2.1/config/zookeeper.properties
+# kafka server start command - kafka-server-start.sh /Users/aryangarg/Downloads/kafka_2.13-3.2.1/config/server.properties
+# redis server - src/redis-server
