Third Party API Integrated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,11 @@ spring.redis.host=localhost
 spring.redis.port=6379
 redis.set = redisKey
 
+# API connect
+api.url = https://api.imiconnect.in/resources/v1/messaging
 
-# github token : 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
+
+# github token : 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
 # zookeeper server start command - zookeeper-server-start.sh /Users/aryangarg/Downloads/kafka_2.13-3.2.1/config/zookeeper.properties
 # kafka server start command - kafka-server-start.sh /Users/aryangarg/Downloads/kafka_2.13-3.2.1/config/server.properties
 # redis server - src/redis-server
