Elastic Search Implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,10 @@ redis.set = redisKey
 
 # API connect
 api.url = https://api.imiconnect.in/resources/v1/messaging
+api.key = 93ceffda-5941-11ea-9da9-025282c394f2
 
+# Elastic Search
+ELASTIC_HOST_AND_PORT=localhost:9200
 
 # github token : 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
 # zookeeper server start command - zookeeper-server-start.sh /Users/aryangarg/Downloads/kafka_2.13-3.2.1/config/zookeeper.properties
