--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.redis.host=localhost
 spring.redis.port=6379
 redis.set = redisKey
 
-# API connect
+# 3rd Party API connect
 api.url = https://api.imiconnect.in/resources/v1/messaging
 api.key = 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
 
