--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,32 @@
 #
 # JDBC properties
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/Notification?useSSL=false&serverTimezone=UTC
-spring.datasource.username=dummyuser
-spring.datasource.password=@Aryan_dummy_123
+spring.datasource.url=${SQL_URL}
+spring.datasource.username=${SQL_USERNAME}
+spring.datasource.password=${SQL_PASSWORD}
 
 # Kafka Config
-kafka.topic = notification.send_sms
+kafka.topic = ${KAFKA_TOPIC} 
 kafka.bootstrapAddress = localhost:9092
-kafka.groupid = group1
+kafka.groupid = ${KAFKA_GROUP_ID}
 
 # Redis Config
 spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
-redis.set = redisKey
+redis.set = ${REDIS_KEY} 
 
 # 3rd Party API connect
-api.url = https://api.imiconnect.in/resources/v1/messaging
-api.key = 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
+api.url = ${API_URL} 
+api.key = ${API_KEY}
 
 # Elastic Search
 ELASTIC_HOST_AND_PORT=localhost:9200
 
+#AUTH KEY
+AUTHENTICATION.SECRET.KEY = ${AUTH_KEY}
+
 # zookeeper server start command - zookeeper-server-start.sh /Users/aryangarg/Downloads/kafka_2.13-3.2.1/config/zookeeper.properties
 # kafka server start command - kafka-server-start.sh /Users/aryangarg/Downloads/kafka_2.13-3.2.1/config/server.properties
-# redis server - src/redis-server
+# redis server start - src/redis-server
+# elastic server start - ./elasticsearch
